# Copyright (c) 2023 Unionman Technology Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_prebuilt_etc("power_mode_config") {
  source = "power_mode_config.xml"
  install_enable = true
  relative_install_dir = "power_config"
  install_images = [ system_base_dir ]
  part_name = "product_unionpi_tiger"
}

group("power_config") {
  deps = [ ":power_mode_config" ]
}
