#Copyright (c) 2022 Unionman Technology Co., Ltd.
#Licensed under the Apache License, Version 2.0 (the "License");
#you may not use this file except in compliance with the License.
#You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
#Unless required by applicable law or agreed to in writing, software
#distributed under the License is distributed on an "AS IS" BASIS,
#WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#See the License for the specific language governing permissions and
#limitations under the License.

import("//build/ohos.gni")

group("sample_group") {
  deps = [
    "adc:adc_test",
    "can:can_test",
    "gpio:gpio_test",
    "i2c:i2c_test",
    "pwm:pwm_test",
    "spi:spi_test",
    "uart:uart_test",
  ]
}
