# Copyright (c) 2022 Unionman Technology Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

group("napi") {
  deps = [
    "napisubsys/adc_component:adc_component",
    "napisubsys/gpio_hdf:gpio_hdf",
    "napisubsys/gpioled_part/gpioled_demo:gpioled",
    "napisubsys/i2cnapipart/i2cnapidemo:i2cnapidemo",
    "napisubsys/pwmnapipart/pwmnapidemo:pwmtest",
    "napisubsys/spinapipart/spinapidemo:spitest",
  ]
}
