# Copyright (c) 2022 Unionman Technology Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")

config("warns") {
  cflags = [
    "-Wno-unused-value",
    "-Wno-unused-variable",
    "-Wno-implicit-function-declaration",
  ]
}

ohos_executable("canconfig") {
  output_name = "canconfig"
  sources = [
    "canconfig.c",
    "libsocketcan.c",
  ]

  include_dirs = [
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
    "//third_party/libnl/include",
  ]

  deps = [ "//third_party/libnl:libnl_share" ]

  configs = [ ":warns" ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
  ]

  install_images = [ "system" ]
}

ohos_executable("candump") {
  output_name = "candump"
  sources = [ "candump.c" ]

  include_dirs =
      [ "//base/hiviewdfx/hilog/interfaces/native/innerkits/include" ]

  configs = [ ":warns" ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
  ]

  install_images = [ "system" ]
}

ohos_executable("canecho") {
  output_name = "canecho"
  sources = [ "canecho.c" ]

  include_dirs =
      [ "//base/hiviewdfx/hilog/interfaces/native/innerkits/include" ]

  configs = [ ":warns" ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
  ]

  install_images = [ "system" ]
}

ohos_executable("cansend") {
  output_name = "cansend"
  sources = [ "cansend.c" ]

  include_dirs =
      [ "//base/hiviewdfx/hilog/interfaces/native/innerkits/include" ]

  configs = [ ":warns" ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
  ]

  install_images = [ "system" ]
}

ohos_executable("cansequence") {
  output_name = "cansequence"
  sources = [ "cansequence.c" ]

  include_dirs =
      [ "//base/hiviewdfx/hilog/interfaces/native/innerkits/include" ]

  configs = [ ":warns" ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
  ]

  install_images = [ "system" ]
}

group("can_test") {
  deps = [
    ":canconfig",
    ":candump",
    ":canecho",
    ":cansend",
    ":cansequence",
  ]
}
