# Copyright (c) 2022 Unionman Technology Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")

SUBSYSTEM_DIR = "//foundation/communication/ipc"
IPC_CORE_ROOT = "$SUBSYSTEM_DIR/ipc/native"
BUND = true

ohos_prebuilt_etc("Applist.json") {
  source = "Applist.json"
  part_name = "unionman_products"
}

ohos_prebuilt_executable("get_faultlog.sh") {
  source = "get_faultlog.sh"
  module_install_dir = "bin"
  part_name = "unionman_products"
  install_enable = true
}

ohos_executable("ipc_shell_server") {
  include_dirs = [
    "$IPC_CORE_ROOT/c/adapter/access_token/include",
    "//utils/system/safwk/native/include",
    "//third_party/zlib",
  ]
  if (BUND) {
    sources = [ "ipc_server_disable_verity.cpp" ]
  } else {
    sources = [ "ipc_server.cpp" ]
  }
  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]
  deps = [
    "//base/security/access_token/interfaces/innerkits/nativetoken:libnativetoken",
    "//base/security/access_token/interfaces/innerkits/token_setproc:libtoken_setproc",
    "//foundation/bundlemanager/bundle_framework/interfaces/inner_api/appexecfwk_base:appexecfwk_base",
    "//foundation/bundlemanager/bundle_framework/interfaces/inner_api/appexecfwk_core:appexecfwk_core",
    "//third_party/bounds_checking_function:libsec_static",
    "//third_party/cJSON:cjson",
  ]
  part_name = "unionman_products"
}
group("ipc_shell") {
  deps = [
    ":Applist.json",
    ":get_faultlog.sh",
    ":ipc_shell_server",
  ]
}
