# Copyright (c) 2022 Unionman Technology Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")

ohos_shared_library("opencvnapi") {
  include_dirs = [
    "//foundation/ace/napi/interfaces/kits",
    "//commonlibrary/c_utils/base/include",
    "//vendor/unionman/unionpi_tiger/sample/third_party/opencv/include/opencv4",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
  ]
  sources = [ "opencvnapi.cpp" ]

  deps = [
    "//foundation/arkui/napi:ace_napi",
    "//vendor/unionman/unionpi_tiger/sample/third_party/opencv:opencv",
    "//vendor/unionman/unionpi_tiger/sample/third_party/opencv:opencv_3rdparty",
  ]
  cflags = [
    "-fexceptions",
    "-frtti",
  ]
  remove_configs = [
    "//build/config/compiler:no_exceptions",
    "//build/config/compiler:no_rtti",
  ]
  external_deps = [ "c_utils:utils" ]

  relative_install_dir = "module"

  part_name = "product_unionpi_tiger"

  install_enable = true

  install_images = [ "system" ]
}
