#Copyright(c) 2022 Unionman Technology Co., Ltd.
#Licensed under the Apache License, Version 2.0(the "License");
#you may not use this file except in compliance with the License.
#You may obtain a copy of the License at
#
#http: // www.apache.org/licenses/LICENSE-2.0
#
#Unless required by applicable law or agreed to in writing, software
#distributed under the License is distributed on an "AS IS" BASIS,
#WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#See the License for the specific language governing permissions and
#limitations under the License.

import("//build/ohos.gni") import("//build/ohos/ndk/ndk.gni")

    config("warns"){cflags = ["-Werror"]}

ohos_executable("opencv_test"){
    include_dirs =
        [
          "//commonlibrary/c_utils/base/include",
          "//vendor/unionman/unionpi_tiger/sample/third_party/opencv/include/"
          "opencv4",
        ] sources = ["main.cpp"] deps =
            [
              "//vendor/unionman/unionpi_tiger/sample/third_party/"
              "opencv:opencv",
              "//vendor/unionman/unionpi_tiger/sample/third_party/"
              "opencv:opencv_3rdparty",
            ] configs = [":warns"] cflags =
                [
                  "-fexceptions",
                  "-frtti",
                ] remove_configs =
                    [
                      "//build/config/compiler:no_exceptions",
                      "//build/config/compiler:no_rtti",
                    ] external_deps = ["c_utils:utils"] install_images =
                        ["system"] part_name = "product_unionpi_tiger"}
