# Copyright (c) 2023 Unionman Technology Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

#ohos_shared_library（）中的hellonapi决定了生成动态库的名称，增量编译阶段生成动态库libhellonapi.z.so

ohos_shared_library("napi_adc") {
  include_dirs = [
    #NAPI头文件目录
    "//foundation/arkui/napi/interfaces/kits",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",

    #根据增量编译阶段报错添加的头文件目录
    "//third_party/node/src",
  ]

  #编译需要的源文件
  sources = [
    "adc.cpp",
    "iadc.c",
  ]

  #指定编译依赖libace_napi.z.so动态库
  deps = [ "//foundation/arkui/napi:ace_napi" ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
  ]

  #指定库生成的路径
  #libhellonapi.z.so会安装在rk3568开发板的system/lib/module目录下
  relative_install_dir = "module"

  #子系统名称是mysubsys
  subsystem_name = "napisubsys"

  #组件名称
  part_name = "adc_component"
}
