#Copyright(c) 2023 Unionman Technology Co., Ltd.
#Licensed under the Apache License, Version 2.0(the "License");
#you may not use this file except in compliance with the License.
#You may obtain a copy of the License at
#
#http: // www.apache.org/licenses/LICENSE-2.0
#
#Unless required by applicable law or agreed to in writing, software
#distributed under the License is distributed on an "AS IS" BASIS,
#WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#See the License for the specific language governing permissions and
#limitations under the License.

import("//build/ohos.gni") ohos_shared_library("i2cnapi"){
    include_dirs =
        [
          "//foundation/ace/napi/interfaces/kits",
          "//commonlibrary/c_utils/base/include",
          "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
          "//drivers/hdf_core/framework/include/platform",
          "//third_party/bounds_checking_function/include",
        ]

    sources = ["i2cnapidemo.cpp"]

    deps =
        [
          "//drivers/hdf_core/adapter/uhdf2/platform:libhdf_platform",
          "//foundation/arkui/napi:ace_napi",
        ]

    external_deps =
        [
          "c_utils:utils",
          "hdf_core:libhdf_utils",
          "hiviewdfx_hilog_native:libhilog",
        ]

    relative_install_dir = "module" subsystem_name =
        "factorysubsystem" part_name = "factory"}
