# Copyright (c) 2022 Unionman Technology Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")

ohos_executable("adc_temp") {
  output_name = "adc_temp"
  sources = [
    "main.c",
    "um_adc.c",
  ]

  include_dirs = [ 
    "//commonlibrary/c_utils/base/include",
    "//commonlibrary/utils_lite/include",
    "//kernel/liteos_m/kal/cmsis",
    "//base/iothardware/peripheral/interfaces/inner_api",
    ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  relative_install_dir = "module"
  subsystem_name="my_project"
  part_name = "adc_part"
}
