import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")

ohos_shared_library("templed") {
  include_dirs = [ 
    "//foundation/ace/napi/interfaces/kits",
    "//commonlibrary/c_utils/base/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include"
   ]

  sources = [
    "templed.cpp",
    "um_adc.c",
    "um_gpio.c",
  ]


  #deps = [ "//foundation/arkui/napi:ace_napi" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "napi:ace_napi",
  ]

  relative_install_dir = "module"
  subsystem_name = "my_project"
  part_name = "myproject"
}
